<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Main Menu -->
    <string name="app_name">Defender of Egril</string>
    <string name="app_subtitle">Defend the meadows of Egril against the Hordes of Gleid Thyae under the Banner of the evil Ewhad</string>
    <string name="start_game">Start Game</string>
    <string name="continue_game">Continue Game</string>
    <string name="rules">Rules</string>
    <string name="exit_game">Exit Game</string>
    <string name="exit_game_confirm_title">Exit Game?</string>
    <string name="exit_game_confirm_message">Are you sure you want to exit the game?</string>
    <string name="exit">Exit</string>
    
    <!-- Commit Info Dialog -->
    <string name="commit_info_title">Build Information</string>
    <string name="commit_hash_label">Commit Hash:</string>
    <string name="commit_date_label">Commit Date:</string>
    <string name="commit_message_label">Commit Message:</string>
    
    <!-- Level Complete Screen -->
    <string name="victory">Victory!</string>
    <string name="battle_won">Battle Won!</string>
...
    <string name="restore_game_data">Restore Game Data</string>
    <string name="restore_game_data_confirm_title">Restore Game Data?</string>
    <string name="restore_game_data_confirm_message">This will backup your current game data and restore the original levels from the repository. Your current data will be preserved in a backup folder. Are you sure?</string>
    <string name="restore_game_data_success_title">Game Data Restored</string>
    <string name="restore_game_data_success_message">Game data has been restored from the repository. Your previous data was backed up to: %s</string>
    <string name="game_data">Game Data</string>
    <string name="close">Close</string>
    <string name="settings_hint_title">Settings Available</string>
    <string name="settings_hint_message">Click the settings icon to customize your experience. Available settings include:</string>
    <string name="settings_hint_dismiss">Got it!</string>
    
    <!-- Common Actions -->
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    
    <!-- Game Play -->
    <string name="coins">Coins</string>
...
